Update img path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="Malte-modified.png" alt="Malte Rettberg profile picture" /></td>
+        <td><img src="images/Malte-modified.png" alt="Malte Rettberg profile picture" /></td>
         <td>
           <h1>Malte Rettberg</h1>
           <p>
